Fix calendar noshow on IE11

--- a/packages/gafl-webapp-service/assets/sass/rod-licensing/_calendar.scss
+++ b/packages/gafl-webapp-service/assets/sass/rod-licensing/_calendar.scss
@@ -6,7 +6,6 @@ div.flatpickr-calendar {
 div#cal-image-div {
   display: inline-block;
   position: relative;
-  content: url('/public/images/icon-calendar-2x.png');
   top: 18px;
   cursor: pointer;
   border-radius: 0;
